--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -22,16 +22,18 @@ jobs:
         run: |
           pip install selenium pandas
 
-      - name: Install Chrome + ChromeDriver manually
+      - name: Install Chrome v114 and matching ChromeDriver
         run: |
           sudo apt update
           sudo apt install -y unzip wget curl
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt install -y ./google-chrome-stable_current_amd64.deb
-          rm google-chrome-stable_current_amd64.deb
-          CHROME_VERSION=$(google-chrome --version | grep -oP "\d+\.\d+\.\d+")
-          CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}")
-          wget "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
+
+          # Install Chrome v114
+          wget https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_114.0.5735.90-1_amd64.deb
+          sudo apt install -y ./google-chrome-stable_114.0.5735.90-1_amd64.deb
+          rm google-chrome-stable_114.0.5735.90-1_amd64.deb
+
+          # Install matching ChromeDriver v114
+          wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
           unzip chromedriver_linux64.zip
           sudo mv chromedriver /usr/local/bin/
           sudo chmod +x /usr/local/bin/chromedriver
