--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -18,25 +18,15 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
-          pip install selenium pandas
+          pip install selenium pandas chromedriver-autoinstaller
 
-      - name: Install Chrome v114 and matching ChromeDriver
+      - name: Install latest Chrome
         run: |
-          sudo apt update
-          sudo apt install -y unzip wget curl
-
-          # Install Chrome v114
-          wget https://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_114.0.5735.90-1_amd64.deb
-          sudo apt install -y ./google-chrome-stable_114.0.5735.90-1_amd64.deb
-          rm google-chrome-stable_114.0.5735.90-1_amd64.deb
-
-          # Install matching ChromeDriver v114
-          wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install -y ./google-chrome-stable_current_amd64.deb
+          rm google-chrome-stable_current_amd64.deb
 
       - name: Run scraper
         run: python smm_usd_price_scraper.py
