--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -36,6 +36,12 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git pull origin main
-          git add usd_lithium_price.csv
-          git commit -m "Daily update: $(date +'%Y-%m-%d')" || echo "No changes to commit"
-          git push
+          if [ -f "usd_lithium_price.csv" ]; then
+            git add usd_lithium_price.csv
+            git diff --cached --quiet || git commit -m "Daily update: $(date +'%Y-%m-%d')"
+            git push
+          else
+            echo "CSV file not found – skipping commit"
+          fi
+
+      
