--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -2,17 +2,16 @@ name: Daily Lithium Price Scraper
 
 on:
   schedule:
-    - cron: '0 0 * * *'   # 08:00 SGT
-    - cron: '0 1 * * *'   # 10:05 SGT
-    - cron: '0 2 * * *'   # 12:05 SGT
-    - cron: '0 3 * * *'   # 14:05 SGT
-    - cron: '0 4 * * *'   # 16:05 SGT
-    - cron: '0 5 * * *'  # 18:05 SGT
-    - cron: '0 6 * * *'  # 20:05 SGT
-    - cron: '0 7 * * *'  # 22:05 SGT
-    - cron: '0 8 * * *'  # 00:05 SGT (next day)
-    - cron: '0 9 * * *'  # 02:05 SGT (next day)
-    - cron: '0 10 * * *'  # 02:05 SGT (next day)
+    - cron: '5 0 * * *'   # 08:05 UTC (16:05 SGT)
+    - cron: '15 2 * * *'  # 10:15 UTC (18:15 SGT)
+    - cron: '25 4 * * *'  # 12:25 UTC (20:25 SGT)
+    - cron: '35 6 * * *'  # 14:35 UTC (22:35 SGT)
+    - cron: '45 8 * * *'  # 16:45 UTC (00:45+1 SGT)
+    - cron: '55 10 * * *' # 18:55 UTC (02:55+1 SGT)
+    - cron: '5 13 * * *'  # 21:05 UTC (05:05+1 SGT)
+    - cron: '15 15 * * *' # 23:15 UTC (07:15+1 SGT)
+    - cron: '25 17 * * *' # 01:25 UTC (09:25+1 SGT)
+    - cron: '35 19 * * *' # 03:35 UTC (11:35+1 SGT)
   workflow_dispatch:
 
 jobs:
@@ -30,7 +29,7 @@ jobs:
 
       - name: Install Python dependencies
         run: |
-          pip install selenium pandas pytz chromedriver-autoinstaller
+          pip install selenium pandas chromedriver-autoinstaller
 
       - name: Install latest Chrome
         run: |
@@ -48,7 +47,8 @@ jobs:
           git pull origin main
           if [ -f "daily_lithium_prices_horizontal.csv" ]; then
             git add daily_lithium_prices_horizontal.csv
-            git diff --cached --quiet || git commit -m "Update: $(date +'%Y-%m-%d %H:%M')"
+            git diff --cached --quiet || git commit -m "Daily update: $(date +'%Y-%m-%d %H:%M:%S')"
             git push
           else
             echo "CSV file not found – skipping commit"
+          fi
